# scargo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PLUGIN_SYSTEM.md  README.md  README_CN.md  SCALA_BUILDER_ARCHITECTURE.md  i18n.json  project.py  project_for_ai.txt  project_tokens.txt
.bsp/: scala-cli.json
.history/: Cargo_20251116111832.toml  Cargo_20251116111920.toml  Cargo_20251116111925.toml  Cargo_20251116111927.toml  Cargo_20251116111929.toml  Cargo_20251116111931.toml  Cargo_20251116111934.toml  Cargo_20251116111936.toml  Cargo_20251116111939.toml  Cargo_20251116111944.toml  Cargo_20251116111951.toml  Cargo_20251116111955.toml  Cargo_20251116111957.toml  Cargo_20251116111959.toml  Cargo_20251116112002.toml  Cargo_20251116112004.toml  Cargo_20251116112006.toml  Cargo_20251116112016.toml  Cargo_20251116112019.toml  Cargo_20251116112021.toml  Cargo_20251116112025.toml  Cargo_20251116112028.toml  Cargo_20251116112031.toml  Cargo_20251116112043.toml  Cargo_20251116112048.toml  Cargo_20251116112049.toml  Cargo_20251116112053.toml  Cargo_20251116112055.toml  Cargo_20251116125205.toml  README_20251116130748.md
.history/hello/: Scargo_20251116113915.toml  Scargo_20251116114725.toml  Scargo_20251116120622.toml  Scargo_20251116125325.toml  Scargo_20251116125328.toml  Scargo_20251116125329.toml
.history/src/: add_20251116120749.rs  add_20251116121131.rs  add_20251116121244.rs  add_20251116121259.rs  add_20251116121345.rs  add_20251116121448.rs  add_20251116121504.rs  add_20251116121508.rs  add_20251116121519.rs  add_20251116121606.rs  add_20251116121609.rs  add_20251116121627.rs  add_20251116121718.rs  add_20251116121727.rs  add_20251116121736.rs  add_20251116121817.rs  add_20251116121844.rs  add_20251116121851.rs  add_20251116121916.rs  add_20251116121928.rs  add_20251116121936.rs  add_20251116122040.rs  add_20251116122101.rs  add_20251116122102.rs  add_20251116122224.rs  add_20251116122230.rs  add_20251116122232.rs  add_20251116122239.rs  add_20251116122507.rs  add_20251116122627.rs  add_20251116122636.rs  add_20251116122650.rs  add_20251116122656.rs  add_20251116122659.rs  add_20251116122702.rs  add_20251116122709.rs  add_20251116122818.rs  add_20251116122827.rs  add_20251116123048.rs  add_20251116123051.rs  (+125 more)
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-envs.json  ide-inputs.json
.scala-build/.bloop/: scargo_c69e7bccc1-test.json  scargo_c69e7bccc1.json
.scala-build/scargo_c69e7bccc1/classes/main/: Main.tasty
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/plugins/: Cargo.toml  README.md
crates/plugins/src/: jsp.rs  lib.rs
crates/plugins/templates/: index.jsp.template
crates/scargo/: Cargo.toml
crates/scargo-plugin/: Cargo.toml  README.md
crates/scargo-plugin/src/: lib.rs
crates/scargo/src/: cli.rs  config.rs  i18n.rs  lib.rs
crates/scargo/src/cmd/: builtin.rs  init.rs  mod.rs  new.rs  workspace.rs
crates/scargo/src/core/: app.rs  handler.rs  mod.rs
crates/scargo/src/runtime/: executor.rs
crates/scargo/src/templates/: i18n.en.template  i18n.zh.template  main.scala.template  workspace.scargo.toml.template
crates/sinter-cli/: Cargo.toml
crates/sinter-cli/src/: main.rs
crates/sinter-core/: Cargo.toml  I18N.md  build.rs
crates/sinter-core/src/: cli.rs  commands.rs  config.rs  config_compat.rs  error.rs  i18n.rs  lib.rs
crates/sinter-core/src/cli/: builtin.rs  mod.rs  parser.rs
crates/sinter-core/src/cli/commands/: init.rs  mod.rs  new.rs  test.rs  workspace.rs
crates/sinter-core/src/cmd/: builtin.rs  init.rs  mod.rs  new.rs  test.rs  workspace.rs
crates/sinter-core/src/config/: loader.rs  mod.rs  writer.rs
crates/sinter-core/src/controllers/: mod.rs  project.rs
crates/sinter-core/src/core/: app.rs  mod.rs
crates/sinter-core/src/dependency/: coursier_resolver.rs  mod.rs  resolver.rs  sbt_resolver.rs  scala_cli_resolver.rs
crates/sinter-core/src/di/: mod.rs
crates/sinter-core/src/domain/: dependency.rs  directory.rs  library.rs  mod.rs  project.rs  workspace.rs
crates/sinter-core/src/error/: mod.rs
crates/sinter-core/src/ide/: bsp_setup.rs  classpath_generator.rs  mod.rs
crates/sinter-core/src/models/: dependency.rs  directory.rs  library.rs  mod.rs  project.rs  workspace.rs
crates/sinter-core/src/routes/: mod.rs
crates/sinter-core/src/runtime/: executor.rs  mod.rs
crates/sinter-core/src/services/: mod.rs  project.rs
crates/sinter-core/src/toolkit/: file.rs  http.rs  json.rs  mod.rs  os.rs  path.rs  template.rs
crates/sinter-core/src/workspace/: manager.rs  member.rs  mod.rs
crates/sinter-core/templates/: .classpath.template  .scala-build.template  i18n.en.template  i18n.json  i18n.zh.template  ide-options-v2.json.template  sinter.toml.template
crates/sinter-plugin-api/: Cargo.toml  README.md
crates/sinter-plugin-api/src/: lib.rs
crates/sinter-plugins/: Cargo.toml  README.md
crates/sinter-plugins/src/: jsp.rs  lib.rs
crates/sinter-plugins/templates/: pom.xml.template  web.xml.template
docs/: README.md  index.html  script.js
hello/: Scargo.toml  project.toml
hello/first/: project.toml
hello/haha/: project.toml
hello/hehe/: project.toml
hello/second/: project.toml
hello/src/main/scala/: Main.scala
project/: project.toml
src/: add.rs  cli.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cmd/: mod.rs  new.rs
src/core/: project.rs
src/i18n/: mod.rs
src/plugins/: mod.rs
src/utils/: mod.rs
test_workspace/sbt_test/: build.sbt
test_workspace/sinter_test/: project.toml
untitled1/: build.sbt  output.txt
website/: README.md  styles.css
(+6 files in other folders)
