[workspace]
members = [
    "crates/scargo",
    "crates/scargo-plugin",
    "crates/plugins",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
config = "0.14"
dirs = "5"
inventory = "0.3"
lazy_static = "1.4"
paste = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml_edit = "0.22"

