[workspace]
members = [
  "crates/sinter-core",
  "crates/sinter-plugin-api",
  "crates/sinter-cli",
  "crates/sinter-plugins",
]
resolver = "2"

# ←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←
# 新增这几行（一次性解决所有继承问题）
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
# 可选：以后想统一改版本号、license、authors、repository 等也放这里
# authors = ["Your Name <you@example.com>"]
# repository = "https://github.com/yourusername/sinter"
# ←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"          
toml_edit = "0.22"
config = "0.14"
dirs = "5"
inventory = "0.3"
lazy_static = "1.4"
paste = "1.0"