[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.23.7"
config = "0.15.19"
dirs = "6.0.0"
paste = "1.0"
lazy_static = "1.4"
inventory = "0.3"

