[package]
name = "scargo-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scargo 插件开发 API - 包含插件开发所需的所有依赖和类型"

[dependencies]
scargo = { path = "../scargo" }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true

