[package]
name = "scargo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
config.workspace = true
dirs.workspace = true
inventory.workspace = true
lazy_static.workspace = true
paste.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml_edit.workspace = true

