# crates/sinter-cli/Cargo.toml   ← 修改这里
[package]
name = "sinter-cli"     
# 或者 name = "sinter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sinter"                   
path = "src/main.rs"

[dependencies]
sinter = { path = "../sinter-core" }
sinter-plugins = { path = "../sinter-plugins" }
anyhow = { workspace = true }
tokio = { workspace = true }

