[package]
name = "sinter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sinter"
path = "src/main.rs"

[dependencies]
sinter = { path = "../sinter-core" }
sinter-plugins = { path = "../sinter-plugins" }
anyhow = { workspace = true }
tokio = { workspace = true }

