# crates/sinter-plugin-api/Cargo.toml
[package]
name = "sinter-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "sinter 插件开发 API"

[dependencies]
sinter = { path = "../sinter-core" }
anyhow      = { workspace = true }
async-trait = { workspace = true }
clap        = { workspace = true }
tokio       = { workspace = true }